--- a/SAAiOS/TextEdition/TextEdition.storyboard
+++ b/SAAiOS/TextEdition/TextEdition.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -13,85 +13,40 @@
         <!--TextEdition-->
         <scene sceneID="yUG-lL-AsK">
             <objects>
-                <viewController storyboardIdentifier="TextEditionViewController" title="TextEdition" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JEX-9P-axG" customClass="TextEditionViewController" customModule="SAAiOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TextEditionViewController" title="TextEdition" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JEX-9P-axG" customClass="TextEditionViewController" customModule="SAAi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="svH-Pt-448">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A9y-1y-g5a">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <connections>
-                                    <segue destination="2Xm-Fx-EDf" kind="embed" id="r5G-KF-sNI"/>
-                                </connections>
-                            </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qZd-cU-bNl">
-                                <rect key="frame" x="517" y="-81" width="0.0" height="748"/>
-                                <connections>
-                                    <segue destination="2Xm-Fx-EDf" kind="embed" id="M9s-Ll-soL"/>
-                                </connections>
-                            </containerView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Ub-vI-gXG">
+                                <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
+                                <subviews>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A9y-1y-g5a">
+                                        <rect key="frame" x="0.0" y="0.0" width="507" height="748"/>
+                                        <connections>
+                                            <segue destination="2Xm-Fx-EDf" kind="embed" id="r5G-KF-sNI"/>
+                                        </connections>
+                                    </containerView>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qZd-cU-bNl">
+                                        <rect key="frame" x="517" y="0.0" width="507" height="748"/>
+                                        <connections>
+                                            <segue destination="2Xm-Fx-EDf" kind="embed" id="M9s-Ll-soL"/>
+                                        </connections>
+                                    </containerView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="qZd-cU-bNl" firstAttribute="width" secondItem="A9y-1y-g5a" secondAttribute="width" id="bFr-lV-hmQ"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qZd-cU-bNl" firstAttribute="bottom" secondItem="VUw-jc-0yf" secondAttribute="bottom" id="5Wj-Bt-OtS"/>
-                            <constraint firstAttribute="bottom" secondItem="A9y-1y-g5a" secondAttribute="bottom" id="6n3-ZV-xAs"/>
-                            <constraint firstItem="qZd-cU-bNl" firstAttribute="leading" secondItem="A9y-1y-g5a" secondAttribute="trailing" constant="10" id="Efo-eb-NB6"/>
-                            <constraint firstItem="qZd-cU-bNl" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" id="Eki-XP-3uC"/>
-                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="qZd-cU-bNl" secondAttribute="trailing" id="Kxv-Mk-4pE"/>
-                            <constraint firstItem="A9y-1y-g5a" firstAttribute="top" secondItem="svH-Pt-448" secondAttribute="top" id="Lkf-Lu-cFD"/>
-                            <constraint firstItem="A9y-1y-g5a" firstAttribute="bottom" secondItem="VUw-jc-0yf" secondAttribute="bottom" id="WOA-VC-M5b"/>
-                            <constraint firstItem="A9y-1y-g5a" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" id="e8f-NW-tNd"/>
-                            <constraint firstItem="qZd-cU-bNl" firstAttribute="width" secondItem="A9y-1y-g5a" secondAttribute="width" id="gIS-Gz-ZaE"/>
-                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="A9y-1y-g5a" secondAttribute="trailing" id="pC6-yy-qRm"/>
-                            <constraint firstItem="A9y-1y-g5a" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" id="qUO-NL-DhN"/>
-                            <constraint firstItem="A9y-1y-g5a" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" id="rBg-Sf-IPD"/>
-                            <constraint firstItem="qZd-cU-bNl" firstAttribute="leading" secondItem="A9y-1y-g5a" secondAttribute="trailing" constant="10" id="xSY-de-yjB"/>
+                            <constraint firstItem="6Ub-vI-gXG" firstAttribute="trailing" secondItem="VUw-jc-0yf" secondAttribute="trailing" id="5PI-RZ-Lol"/>
+                            <constraint firstItem="6Ub-vI-gXG" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" id="DQk-qV-oQf"/>
+                            <constraint firstItem="6Ub-vI-gXG" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" id="Kqy-ID-2be"/>
+                            <constraint firstItem="6Ub-vI-gXG" firstAttribute="bottom" secondItem="VUw-jc-0yf" secondAttribute="bottom" id="Sny-Id-hlx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VUw-jc-0yf"/>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="qZd-cU-bNl"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="6n3-ZV-xAs"/>
-                                <exclude reference="Lkf-Lu-cFD"/>
-                                <exclude reference="WOA-VC-M5b"/>
-                                <exclude reference="e8f-NW-tNd"/>
-                                <exclude reference="qUO-NL-DhN"/>
-                                <exclude reference="rBg-Sf-IPD"/>
-                                <exclude reference="Kxv-Mk-4pE"/>
-                                <exclude reference="pC6-yy-qRm"/>
-                                <exclude reference="5Wj-Bt-OtS"/>
-                                <exclude reference="Efo-eb-NB6"/>
-                                <exclude reference="Eki-XP-3uC"/>
-                                <exclude reference="gIS-Gz-ZaE"/>
-                                <exclude reference="xSY-de-yjB"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="6n3-ZV-xAs"/>
-                                <include reference="Lkf-Lu-cFD"/>
-                                <include reference="qUO-NL-DhN"/>
-                                <include reference="pC6-yy-qRm"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=regular">
-                            <mask key="subviews">
-                                <include reference="qZd-cU-bNl"/>
-                            </mask>
-                            <mask key="constraints">
-                                <include reference="WOA-VC-M5b"/>
-                                <include reference="e8f-NW-tNd"/>
-                                <include reference="rBg-Sf-IPD"/>
-                                <include reference="Kxv-Mk-4pE"/>
-                                <include reference="5Wj-Bt-OtS"/>
-                                <include reference="Efo-eb-NB6"/>
-                                <include reference="Eki-XP-3uC"/>
-                                <include reference="gIS-Gz-ZaE"/>
-                                <include reference="xSY-de-yjB"/>
-                            </mask>
-                        </variation>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
@@ -107,20 +62,20 @@
         <!--Text Panel View Controller-->
         <scene sceneID="RfG-W3-FOO">
             <objects>
-                <viewController storyboardIdentifier="TextPanelViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2Xm-Fx-EDf" customClass="TextPanelViewController" customModule="SAAiOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TextPanelViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2Xm-Fx-EDf" customClass="TextPanelViewController" customModule="SAAi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fpk-cV-miu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="507" height="748"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gCf-wZ-KKp">
-                                <rect key="frame" x="10" y="30" width="355" height="589"/>
+                                <rect key="frame" x="10" y="30" width="487" height="670"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="5e5-qn-tx9">
-                                <rect key="frame" x="10" y="629" width="355" height="29"/>
+                                <rect key="frame" x="10" y="710" width="487" height="29"/>
                                 <segments>
                                     <segment title="Cuneiform"/>
                                     <segment title="Transliteration"/>
@@ -156,28 +111,28 @@
         <!--Info Table View Controller-->
         <scene sceneID="JuN-pJ-dhO">
             <objects>
-                <tableViewController storyboardIdentifier="InfoTableViewController" id="SPC-gf-gcU" customClass="InfoTableViewController" customModule="SAAiOS" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="InfoTableViewController" id="SPC-gf-gcU" customClass="InfoTableViewController" customModule="SAAi" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Uf9-2V-NSg">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="info" textLabel="GhK-oh-Lcx" detailTextLabel="mTe-eT-vJq" style="IBUITableViewCellStyleSubtitle" id="5YO-ZY-4zI">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5YO-ZY-4zI" id="dOR-pR-PSf">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GhK-oh-Lcx">
-                                            <rect key="frame" x="16" y="1.5" width="26.5" height="16"/>
+                                            <rect key="frame" x="20" y="1.5" width="26.5" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mTe-eT-vJq">
-                                            <rect key="frame" x="16" y="20" width="44" height="20.5"/>
+                                            <rect key="frame" x="20" y="20" width="44" height="20.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="textColor"/>
@@ -187,14 +142,14 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="interactive" textLabel="AUz-K6-8bk" style="IBUITableViewCellStyleDefault" id="Y2y-z7-8ki">
-                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="72" width="1024" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Y2y-z7-8ki" id="Cdo-Vf-ZIg">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AUz-K6-8bk">
-                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <rect key="frame" x="20" y="0.0" width="984" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
